pasamos todo a ajax. error al crear empleado.

--- a/modelosClasicos/WebRoot/WEB-INF/jsf/template.xhtml
+++ b/modelosClasicos/WebRoot/WEB-INF/jsf/template.xhtml
@@ -40,7 +40,7 @@
    			background-image: url(#{request.contextPath}/images/icons/edit.gif) !important;
 		}
 		.new {
-   			background-image: url(/images/icons/new.gif) !important;
+   			background-image: url(#{request.contextPath}/images/icons/new.gif) !important;
 		}
 		.view {
    			background-image: url(#{request.contextPath}/images/icons/view.gif) !important;
