--- a/modelosClasicos/WebRoot/xhtml/employee/viewEmployee.xhtml
+++ b/modelosClasicos/WebRoot/xhtml/employee/viewEmployee.xhtml
@@ -59,7 +59,7 @@
 				<br/>
 				<br/>
 				<p:panel>
-					<p:commandButton value="Volver" image="back" style="margin:0" action="/xhtml/menu.xhtml" ajax="false"/>
+					<p:commandButton value="Volver" image="back" style="margin:0" action="/xhtml/menu.xhtml" ajax="true"/>
 				</p:panel>
 				        <!-- <p:panelGrid id="panelVistaEmpleados" columns="2">  
 						    <f:facet name="header">  
