--- a/modelosClasicos/WebRoot/xhtml/login.xhtml
+++ b/modelosClasicos/WebRoot/xhtml/login.xhtml
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="css/login/base.css"/>
 		<link rel="stylesheet" href="css/login/skeleton.css"/>
 		<link rel="stylesheet" href="css/login/layout.css"/>
-	
+		<link rel="icon" href="#{request.contextPath}/images/terminal.png" type="image/png"/>
 	</h:head>
 	<h:body>
 	
@@ -35,7 +35,7 @@
 					  <span>Remember me on this computer</span>
 					</label>
 					<h:panelGroup>
-						<p:commandButton id="loginButton" value="Login"
+						<p:commandButton id="button" value="Login"
 			             action="#{loginBean.login}" update="growl" ajax="true"/>
 					</h:panelGroup>
 					
